On branch master Your branch is up to date with 'origin/master'.
Changes to be committed:
	modified:   .vscode/settings.json
	modified:   android/app/build.gradle
	new file:   android/app/src/main/ic_launcher-playstore.png
	renamed:    android/app/src/main/java/com/MoneyTracker/MainActivity.java -> android/app/src/main/java/com/Money_Tracker/MainActivity.java
	modified:   android/app/src/main/res/drawable/ic_launcher_background.xml
	modified:   android/app/src/main/res/mipmap-anydpi-v26/ic_launcher.xml
	modified:   android/app/src/main/res/mipmap-anydpi-v26/ic_launcher_round.xml
	deleted:    android/app/src/main/res/mipmap-hdpi/ic_launcher.png
	new file:   android/app/src/main/res/mipmap-hdpi/ic_launcher.webp
	deleted:    android/app/src/main/res/mipmap-hdpi/ic_launcher_foreground.png
	new file:   android/app/src/main/res/mipmap-hdpi/ic_launcher_foreground.webp
	deleted:    android/app/src/main/res/mipmap-hdpi/ic_launcher_round.png
	new file:   android/app/src/main/res/mipmap-hdpi/ic_launcher_round.webp
	deleted:    android/app/src/main/res/mipmap-mdpi/ic_launcher.png
	new file:   android/app/src/main/res/mipmap-mdpi/ic_launcher.webp
	deleted:    android/app/src/main/res/mipmap-mdpi/ic_launcher_foreground.png
	new file:   android/app/src/main/res/mipmap-mdpi/ic_launcher_foreground.webp
	deleted:    android/app/src/main/res/mipmap-mdpi/ic_launcher_round.png
	new file:   android/app/src/main/res/mipmap-mdpi/ic_launcher_round.webp
	deleted:    android/app/src/main/res/mipmap-xhdpi/ic_launcher.png
	new file:   android/app/src/main/res/mipmap-xhdpi/ic_launcher.webp
	deleted:    android/app/src/main/res/mipmap-xhdpi/ic_launcher_foreground.png
	new file:   android/app/src/main/res/mipmap-xhdpi/ic_launcher_foreground.webp
	deleted:    android/app/src/main/res/mipmap-xhdpi/ic_launcher_round.png
	new file:   android/app/src/main/res/mipmap-xhdpi/ic_launcher_round.webp
	deleted:    android/app/src/main/res/mipmap-xxhdpi/ic_launcher.png
	new file:   android/app/src/main/res/mip

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">MoneyTracker</string>
     <string name="title_activity_main">MoneyTracker</string>
-    <string name="package_name">com.MoneyTracker</string>
-    <string name="custom_url_scheme">com.MoneyTracker</string>
+    <string name="package_name">com.Money_Tracker</string>
+    <string name="custom_url_scheme">com.Money_Tracker</string>
 </resources>
